--- a/MainCode2.ipynb
+++ b/MainCode2.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'decg_peaks' from 'Lab2Functions' (c:\\MCI WS 2024\\Biosignalverarbeitung\\LAB2\\Biosignalverarbeitung_Selbsthilfegruppe\\Lab2Functions.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpatches\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m FancyBboxPatch, FancyArrowPatch\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msignal\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m butter, filtfilt \n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mLab2Functions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m decg_peaks, d_ecg_peaks, Rwave_peaks\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'decg_peaks' from 'Lab2Functions' (c:\\MCI WS 2024\\Biosignalverarbeitung\\LAB2\\Biosignalverarbeitung_Selbsthilfegruppe\\Lab2Functions.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -25,12 +13,13 @@
     "import matplotlib.patches as mpatches\n",
     "from matplotlib.patches import FancyBboxPatch, FancyArrowPatch\n",
     "from scipy.signal import butter, filtfilt \n",
+    "import os\n",
     "from Lab2Functions import decg_peaks, d_ecg_peaks, Rwave_peaks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -498,6 +487,13 @@
     "(c)&emsp;*Beschreiben Sie, was unter dem Begriff Cardiac Output verstanden wird (2-4 Sätze). Warum bewirkt eine plötzliche Aktivierung der Muskulatur keine direkte Änderung des Cardiac Outputs?*<br>\n",
     "'**cardiac output**: The volume of blood pumped by the heart, in particular by the left or right ventricle, in the time interval of one minute.' [Definition aus Internet](https://med.libretexts.org/Bookshelves/Anatomy_and_Physiology/Anatomy_and_Physiology_(Boundless)/17%3A_Cardiovascular_System%3A_The_Heart/17.4%3A_Physiology_of_the_Heart/17.4E%3A_Cardiac_Output)<br>\n",
     "Der Anstieg der Herzfrequenz und des Schlagvolumens erfolgt verzögert, da das Herzkreislaufsystem erst erst hormonell und vom Nervensystem angeregt werden muss."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test"
    ]
   },
   {
