HRV und HR für Tabelle

--- a/MainCode2.ipynb
+++ b/MainCode2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.patches as mpatches\n",
     "from matplotlib.patches import FancyBboxPatch, FancyArrowPatch\n",
-    "from scipy.signal import butter, filtfilt \n",
+    "from scipy.signal import butter, filtfilt, find_peaks\n",
     "import os\n",
     "from Lab2Functions import decg_peaks, d_ecg_peaks, Rwave_peaks"
    ]
@@ -275,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5: *Geben Sie den Code an, welcher für die Aufnahme der Rohdaten des EKG Signals verantwortlich ist.*"
+    "4: *Geben Sie den Code an, welcher für die Aufnahme der Rohdaten des EKG Signals verantwortlich ist.*"
    ]
   },
   {
@@ -289,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6:  *Plotten Sie etwa 5 Sekunden des EKG-Signals vom Experiment in Ruhe von einem der Teilnehmer (gefiltert). Nutzen Sie die Ergebnisse der Peak Suche-Funktion, um die R-Zacken im Plot zu labeln.*"
+    "5:  *Plotten Sie etwa 5 Sekunden des EKG-Signals vom Experiment in Ruhe von einem der Teilnehmer (gefiltert). Nutzen Sie die Ergebnisse der Peak Suche-Funktion, um die R-Zacken im Plot zu labeln.*"
    ]
   },
   {
@@ -398,6 +398,148 @@
    "source": [
     "#Schritt 3:\n",
     "Rwave_t = Rwave_peaks(f5sekdataRTOM, d_ecg, Rwave_peaks_d_ecg, df_5sek_TOM['Time'].reset_index(drop=True)/1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Herzfrequenz von Tom: 76.79 BPM\n",
+      "Herzfrequenz von Amelie: 87.05 BPM\n",
+      "Herzfrequenz von Georg: 72.24 BPM\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Herzfrequenz von Tom: 76.79 bpm, HRV: 103.1898 ms\n",
+      "Herzfrequenz von Amelie: 87.05 bpm, HRV: 211.6300 ms\n",
+      "Herzfrequenz von Georg: 72.24 bpm, HRV: 64.1616 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_heart_rate_and_hrv(time_df, ekg_signal, time_column, sampling_rate, threshold=0.5):\n",
+    "    \"\"\"\n",
+    "    Berechnet die Herzfrequenz (BPM) und die HRV (Standardabweichung der RR-Intervalle) aus Zeit- und EKG-Daten.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - time_df: Pandas DataFrame mit den Zeitdaten\n",
+    "    - ekg_signal: Gefiltertes EKG-Signal (NumPy-Array oder Pandas Series)\n",
+    "    - time_column: Name der Zeitspalte im Zeit-DataFrame\n",
+    "    - sampling_rate: Abtastrate des EKG-Signals (Hz)\n",
+    "    - threshold: Mindest-Amplitudenwert für Peaks (Standard: 0.5)\n",
+    "\n",
+    "    Returns:\n",
+    "    - bpm: Durchschnittliche Herzfrequenz (Schläge pro Minute)\n",
+    "    - hrv: Standardabweichung der RR-Intervalle (HRV)\n",
+    "    \"\"\"\n",
+    "    # Sicherstellen, dass time_df ein DataFrame ist\n",
+    "    if not isinstance(time_df, pd.DataFrame):\n",
+    "        raise ValueError(\"time_df muss ein Pandas DataFrame sein.\")\n",
+    "    \n",
+    "    # Zeit- und Signalspalten extrahieren\n",
+    "    time = time_df[time_column]\n",
+    "    \n",
+    "    # Prüfen, ob Zeitstempel in Millisekunden vorliegen (Konvertierung in Sekunden)\n",
+    "    if time.max() > 1000:\n",
+    "        time = time / 1000.0  # In Sekunden umrechnen\n",
+    "    \n",
+    "    # Umwandeln des gefilterten EKG-Signals in eine Pandas Series, falls es ein ndarray ist\n",
+    "    if isinstance(ekg_signal, np.ndarray):\n",
+    "        ekg_signal = pd.Series(ekg_signal)  # Umwandlung in Pandas Series\n",
+    "    \n",
+    "    # Signal glätten (optional, falls gewünscht)\n",
+    "    ekg_signal = ekg_signal.rolling(window=5, center=True).mean().fillna(ekg_signal)\n",
+    "    \n",
+    "    # Peaks im EKG-Signal finden (R-Zacken)\n",
+    "    distance = sampling_rate * 0.8  # Mindestabstand von 0.8 Sekunden\n",
+    "    peaks, properties = find_peaks(ekg_signal, distance=distance, height=threshold)\n",
+    "    \n",
+    "    # Prüfen, ob Peaks gefunden wurden\n",
+    "    if len(peaks) < 2:\n",
+    "        return 0, 0  # Keine sinnvolle Herzfrequenz oder HRV berechenbar\n",
+    "    \n",
+    "    # Zeitstempel der Peaks\n",
+    "    peak_times = time.iloc[peaks]  # Mit .iloc sicherstellen, dass es eine Series ist\n",
+    "    \n",
+    "    # RR-Intervalle berechnen\n",
+    "    rr_intervals = np.diff(peak_times)  # Abstände in Sekunden\n",
+    "    \n",
+    "    # Herzfrequenz berechnen\n",
+    "    bpm = 60 / rr_intervals.mean() if len(rr_intervals) > 0 else 0  # Verhindert Division durch 0\n",
+    "    \n",
+    "    # HRV (Standardabweichung der RR-Intervalle) berechnen\n",
+    "    hrv = np.std(rr_intervals)*1000 if len(rr_intervals) > 0 else 0\n",
+    "    \n",
+    "    return bpm, hrv\n",
+    "\n",
+    "def analyze_multiple_dataframes_with_hrv(time_dfs, ekg_signals, sampling_rate, time_column='Time'):\n",
+    "    \"\"\"\n",
+    "    Analysiert mehrere EKG-Datensätze aus getrennten Zeit- und EKG-DataFrames und gibt die Herzfrequenz und HRV aus.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - time_dfs: Liste von Tupeln mit (DataFrame, Name des Patienten) für Zeitdaten\n",
+    "    - ekg_signals: Liste von gefilterten EKG-Signalen (NumPy-Arrays oder Pandas Series)\n",
+    "    - sampling_rate: Abtastrate der EKG-Daten\n",
+    "    - time_column: Name der Zeitspalte in den Zeit-DataFrames\n",
+    "\n",
+    "    Returns:\n",
+    "    - results: Liste der Ergebnisse mit Namen, berechneter Herzfrequenz und HRV\n",
+    "    \"\"\"\n",
+    "    results = []\n",
+    "    for (time_df, name), ekg_signal in zip(time_dfs, ekg_signals):\n",
+    "        bpm, hrv = calculate_heart_rate_and_hrv(time_df, ekg_signal, time_column, sampling_rate)\n",
+    "        results.append((name, bpm, hrv))\n",
+    "    return results\n",
+    "\n",
+    "# Beispiel für Butterworth-Filter (Bandpass)\n",
+    "lowcut = 0.5  # Untere Grenzfrequenz (Hz)\n",
+    "highcut = 50.0  # Obere Grenzfrequenz (Hz)\n",
+    "sampling_rate = 250  # Sampling-Rate (Hz)\n",
+    "b, a = butter_bandpass(lowcut, highcut, sampling_rate)\n",
+    "\n",
+    "# Deine vorhandenen DataFrames (Zeit-Daten)\n",
+    "time_dfs = [\n",
+    "    (dataRTOM, \"Tom\"),\n",
+    "    (dataRAMELIE, \"Amelie\"),\n",
+    "    (dataRGEORG, \"Georg\")\n",
+    "]\n",
+    "\n",
+    "# Die gefilterten EKG-Daten\n",
+    "ekg_signals = [\n",
+    "    filtfilt(b, a, dataRTOM['EKG']),\n",
+    "    filtfilt(b, a, dataRAMELIE['EKG']),\n",
+    "    filtfilt(b, a, dataRGEORG['EKG'])\n",
+    "]\n",
+    "\n",
+    "# Analyse durchführen\n",
+    "results = analyze_multiple_dataframes_with_hrv(time_dfs, ekg_signals, sampling_rate)\n",
+    "\n",
+    "# Ergebnisse ausgeben\n",
+    "for name, bpm, hrv in results:\n",
+    "    print(f\"Herzfrequenz von {name}: {bpm:.2f} bpm, HRV: {hrv:.4f} ms\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6: *Verwenden Sie Python, um die mittlere Herzfrequenz und HRV (mit der Standardabweichung) für jeden der drei Teilnehmer zu bestimmen. Vergleichen Sie die Ergebnisse in einer Tabelle (eine Zeile pro Teilnehmer). DenkenSie daran, alle Datensätze zu den jeweiligen Teilnehmern mit abzugeben.*"
    ]
   },
   {
