added 8-10 to final

--- a/Assignment2_Abgabe.ipynb
+++ b/Assignment2_Abgabe.ipynb
@@ -673,11 +673,21 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Aufgabe 12\n",
+    "\n",
+    "Berrechnung des metabolischen Enegrieverbrauchs\n"
+   ],
+   "id": "8149e6f20dac9e5b"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "68179e11a3c7978"
+   "id": "7ae953ada89568be"
   }
  ],
  "metadata": {
