--- a/Assignment2_Abgabe.ipynb
+++ b/Assignment2_Abgabe.ipynb
@@ -394,7 +394,7 @@
     "ax.set_ylabel('ECG [mV]')\n",
     "ax.grid(True, which='both', linestyle='--', linewidth=0.5)\n",
     "ax.legend()\n",
-    "plt.show()\n"
+    "plt.show()"
    ],
    "id": "84a64c5824a2cc88",
    "outputs": [
